# graph-converter

./: .gitignore  README.md  graph-converter.cabal  statemachine_0.dot
app/: Main.hs
src/: DotGraphCompiler.hs  DotGraphIntermediateTypes.hs  DotGraphLexer.hs  DotGraphParser.hs  DotGraphTypes.hs  PlantUMLPrettyPrinter.hs
