name:                graph-converter
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/graph-converter#readme
license:             BSD3
license-file:        LICENSE
author:              Jonas Collberg
maintainer:          jonas.collberg@orzone.com
copyright:           2016 Jonas Collberg
category:            Utility
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DotGraphLexer, DotGraphParser, DotGraphIntermediateTypes,
                       DotGraphTypes, PlantUMLPrettyPrinter
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , mtl
                     , parsec
                     , text
                     , wl-pprint
  default-language:    Haskell2010

executable graph-converter
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , graph-converter
  default-language:    Haskell2010

test-suite graph-converter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base
                     , graph-converter
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
